--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+2
+  codable: ^1.0.0
+  provider: ^3.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
