--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   http: ^0.12.0+2
   codable: ^1.0.0
   provider: ^3.1.0
-
+  shared_preferences: ^0.5.3+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
